Fix taking wrong route when clicking on link issue

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
 
     <footer class="py-2 text-center">
-      <a href="/draggable.html" class="text-red-500 font-medium text-sm underline">Get the positions</a>
+      <a href="draggable.html" class="text-red-500 font-medium text-sm underline">Get the positions</a>
     </footer>
 
     <script>
