--- a/draggable.html
+++ b/draggable.html
@@ -47,7 +47,7 @@
     </div>
 
     <footer class="py-2 text-center">
-      <a href="/index.html" class="text-red-500 font-medium text-sm underline">Get back</a>
+      <a href="index.html" class="text-red-500 font-medium text-sm underline">Get back</a>
     </footer>
 
     <script>
